--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
         .hero {
             text-align: center;
             padding: 2em;
-            background-image: url('https://via.placeholder.com/1200x400?text=Welcome+to+Sweet+Shop');
+            background-image: url('https://raw.githubusercontent.com/Nausheenkausar/ecommerceweb/main/sweetimage.avif');
             background-size: cover;
             background-position: center;
             color: white;
@@ -102,25 +102,25 @@
     </div>
     <section class="products">
         <div class="product">
-            <img src="https://via.placeholder.com/200?text=Chocolate" alt="Chocolate">
+            <img src="https://raw.githubusercontent.com/Nausheenkausar/ecommerceweb/main/chocolate.jpeg" alt="Chocolate">
             <h3>Chocolate Delight</h3>
-            <p>$10.99</p>
+            <p>₹10.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/200?text=Candy" alt="Candy">
+            <img src="https://raw.githubusercontent.com/Nausheenkausar/ecommerceweb/main/rainbow.jpeg" alt="Candy">
             <h3>Rainbow Candy</h3>
-            <p>$5.99</p>
+            <p>₹5.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/200?text=Laddu" alt="Laddu">
+            <img src="https://raw.githubusercontent.com/Nausheenkausar/ecommerceweb/main/laddu.jpeg" alt="Laddu">
             <h3>Traditional Laddu</h3>
-            <p>$8.99</p>
+            <p>₹8.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/200?text=Barfi" alt="Barfi">
+            <img src="https://raw.githubusercontent.com/Nausheenkausar/ecommerceweb/main/barfi.jpeg" alt="Barfi">
             <h3>Classic Barfi</h3>
             <p>$9.99</p>
             <button>Add to Cart</button>
